<resources>
    <string name="app_name">到云</string>
    <string name="new_user">注册</string>
    <string name="signin">登录</string>
    <string name="have_sign">已签到</string>
    <string name="not_sign">未签到</string>
    <string name="sign">签到</string>
    <string name="error_create_task">任务标题、详情以及截止日期均不能为空</string>
    <string name="error_set_deadline">截止日期应该大于当前时间</string>
    <string name="create_task">创建任务</string>
    <string name="tip_account">请输入账号</string>
    <string name="tip_password">请输入密码</string>

    <string name="tip_nick">请输入昵称</string>
    <string name="tip_name">请输入姓名</string>
    <string name="tip_email">请输入e-mail</string>
    <string name="tip_telephone">请输入电话号码</string>
    <string name="tip_college">请输入院系</string>
    <string name="tip_join">请输入班课号</string>

    <string name="forget_pass">忘记密码</string>
    <string name="enroll">注册</string>

    <string name="main_home_text">班课</string>
    <string name="main_mine_text">班级</string>
    <string name="main_attention_text">我的</string>
    <string name="exp">当前获得经验值:</string>
    <array name="home_video_tab">
        <item>我创建的@dream@0</item>
        <item>我加入的@dream@1</item>
        <!--<item>+@dream@2</item>-->
    </array>

    <array name="newpost_video_tab">
        <item>美女@dream@0</item>
        <item>搞笑@dream@1</item>
        <item>视频@dream@2</item>
        <item>段子@dream@3</item>
        <item>城市@dream@4</item>
        <item>农村@dream@5</item>
        <item>青春@dream@6</item>
    </array>

    <array name="own_video_tab">
        <item>我的@dream@0</item>
    </array>
    <array name="two_plus">
        <item>+@dream@0</item>
    </array>
    <string name="main_home_activity_resource">签到</string>
    <string name="main_home_activity_member">成员</string>
    <string name="main_home_activity_activity">活动</string>
    <string name="main_home_activity_message">消息</string>
    <string name="main_home_activity_detail">详情</string>
    <array name="activity_home_video_tab">
        <item>全部@dream@0</item>
        <item>进行中@dream@1</item>
        <item>已结束@dream@2</item>
    </array>
    <array name="message_home_video_tab">
        <item>消息@dream@0</item>
    </array>

    <string name="yes">确定</string>
    <string name="no">关闭</string>
    <string name="codetitle">创建班级:(请截图保存二维码)</string>
    <string name="title">创建班级:</string>
    <string name="addtitle">加入班级:</string>
    <string name="updataUserTitle">修改用户信息:</string>
</resources>
